--- a/AnimeHubClient/App.razor
+++ b/AnimeHubClient/App.razor
@@ -5,7 +5,12 @@
         <Found Context="routeData">
             <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
                 <NotAuthorized>
-                    <p>You are not authorized to view this page. Please <a href="login">log in</a>.</p>
+                    @if (context.User.Identity?.IsAuthenticated != true)
+                    {
+                        @* Redirect to login automatically *@
+                        <RedirectToLogin />
+                    }
+                    <p role="alert">You are not authorized to access this resource.</p>
                 </NotAuthorized>
             </AuthorizeRouteView>
             <FocusOnNavigate RouteData="@routeData" Selector="h1" />
