--- a/AnimeHubClient/Pages/Anime/AnimeDetail.razor
+++ b/AnimeHubClient/Pages/Anime/AnimeDetail.razor
@@ -180,7 +180,7 @@ else
             <MudGrid Spacing="3" Class="mb-8">
                 @foreach (var anime in Recommendations)
                 {
-                    <MudItem xs="6" sm="4" md="2">
+                    <MudItem xs="6" sm="4" md="3" lg="2">
                         <AnimeCard Anime="anime" />
                     </MudItem>
                 }
