Anime card skeleton changes using mudblazor

--- a/AnimeHubClient/Shared/AnimeCardSkeleton.razor
+++ b/AnimeHubClient/Shared/AnimeCardSkeleton.razor
@@ -1,13 +1,13 @@
-﻿<div class="card anime-card border-0">
-    <div class="skeleton skeleton-image"></div>
+﻿<MudCard Elevation="0" Class="anime-card">
+    <MudCardMedia Class="skeleton skeleton-image"></MudCardMedia>
     @* <div class="skeleton skeleton-text-line mt-3 mx-auto"></div> *@
 
-    <div class="card-body">
-        <h5 class="skeleton skeleton-text-line mx-auto"></h5>
+    <MudCardContent Class="card-body">
+        <MudText Typo="Typo.body2" Class="skeleton skeleton-text-line mx-auto"></MudText>
         @* <p class="skeleton skeleton-text-line-short"></p>
         <div class="skeleton skeleton-button"></div> *@
-    </div>
-</div>
+    </MudCardContent>
+</MudCard>
 
 @code {
 
